<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2023 VMware, Inc.
    SPDX-License-Identifier: BSD-2-Clause
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DLPEditTextActivity"
    >
    <ScrollView
        android:id="@+id/controlsHolder"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5sp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/dlpExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlp_explanation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <TextView
                android:id="@+id/policyHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policy_heading"
                android:layout_marginTop="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                app:layout_constraintTop_toBottomOf="@+id/dlpExplanation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidePolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/guidePolicy"
                app:layout_constraintBaseline_toBaselineOf="@id/policyOutbound"
                android:text="@string/copy_paste_outbound_protection"
                android:labelFor="@+id/policyOutbound"
                />
            <EditText
                android:id="@+id/policyOutbound"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:layout_constraintLeft_toLeftOf="@id/guidePolicy"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/policyHeading"
                android:importantForAutofill="no"
                android:inputType="none"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/guidePolicy"
                app:layout_constraintBaseline_toBaselineOf="@id/policyInbound"
                android:text="@string/copy_paste_inbound_protection"
                android:labelFor="@+id/policyInbound"
                />
            <EditText
                android:id="@+id/policyInbound"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:layout_constraintLeft_toLeftOf="@id/guidePolicy"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/policyOutbound"
                android:importantForAutofill="no"
                android:inputType="none"
                />
            <TextView
                android:id="@+id/controlsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demonstration_heading"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/policyInbound"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/guideControls"
                app:layout_constraintBaseline_toBaselineOf="@id/awsdk_edit_text"
                android:text="@string/ws1_edittext"
                android:labelFor="@+id/awsdk_edit_text"
                />
            <com.airwatch.ui.widget.AWEditText
                android:id="@+id/awsdk_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/awedittext_placeholder"
                android:singleLine="false"
                android:inputType="textMultiLine"
                app:layout_constraintLeft_toLeftOf="@id/guideControls"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/controlsHeading"
                />
            <TextView
                android:id="@+id/plain_edittext_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/guideControls"
                app:layout_constraintBaseline_toBaselineOf="@id/text_view"
                android:text="@string/plain_edittext"
                />
            <EditText
                android:id="@+id/text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_placeholder"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:singleLine="false"
                app:layout_constraintLeft_toLeftOf="@id/guideControls"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/awsdk_edit_text"
                android:importantForAutofill="no"
                />
            <TextView
                android:id="@+id/awsdk_auto_complete_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/plain_edittext_label"
                app:layout_constraintTop_toBottomOf="@id/text_view"
                android:layout_marginTop="8dp"
                android:text="@string/ws1_awautocompletetextview"
                android:labelFor="@+id/awsdk_auto_complete_text_view"
                />
            <com.airwatch.ui.widget.AWAutoCompleteTextView
                android:id="@+id/awsdk_auto_complete_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/awsdk_auto_complete_label"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/awautocompletetextview_placeholder"
                />
            <TextView
                android:id="@+id/auto_complete_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/awsdk_auto_complete_label"
                app:layout_constraintTop_toBottomOf="@id/awsdk_auto_complete_text_view"
                android:layout_marginTop="8dp"
                android:text="@string/plain_autocompletetextview"
                android:labelFor="@+id/auto_complete_text_view"
                />
            <com.airwatch.ui.widget.AWAutoCompleteTextView
                android:id="@+id/auto_complete_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/auto_complete_label"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/autocompletetextview_placeholder"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>