<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2023 VMware, Inc.
    SPDX-License-Identifier: BSD-2-Clause
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DLPWatermarkActivity"
    >
    <ScrollView
        android:id="@+id/controlsHolder"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5sp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/dlpExplanation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dlp_watermark_explanation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <TextView
                android:id="@+id/policyHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policy_heading"
                android:layout_marginTop="10dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                app:layout_constraintTop_toBottomOf="@+id/dlpExplanation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidePolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/guidePolicy"
                app:layout_constraintBaseline_toBaselineOf="@id/policyWatermark"
                android:text="@string/dlp_watermark_protection"
                android:labelFor="@+id/policyWatermark"
                />
            <EditText
                android:id="@+id/policyWatermark"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:layout_constraintLeft_toLeftOf="@id/guidePolicy"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/policyHeading"
                android:importantForAutofill="no"
                android:inputType="none"
                />
            <TextView
                android:id="@+id/watermark_text_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@id/guidePolicy"
                app:layout_constraintBaseline_toBaselineOf="@id/policyWatermarkText"
                android:text="@string/dlp_watermark_text"
                android:labelFor="@+id/policyWatermarkText"
                />
            <EditText
                android:id="@+id/policyWatermarkText"
                android:layout_width="0dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:ellipsize="end"
                app:layout_constraintLeft_toRightOf="@id/watermark_text_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/policyWatermark"
                android:importantForAutofill="no"
                android:inputType="none"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:focusable="false"
                />

            <TextView
                android:id="@+id/controlsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demonstration_heading"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/policyWatermarkText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <TextView
                android:id="@+id/view_watermark_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_view_watermark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/controlsHeading"
                />
            <com.airwatch.login.ui.AWWatermarkView
                android:id="@+id/view_inserted_watermark"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/view_watermark_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:background="@color/charcoal1"
                app:textAlpha="1"
                app:watermarkText="@string/default_view_watermark"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>